// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NeonImageCarousel renders carousel 1`] = `
<div class="neon-image-carousel-wrapper">
  <div class="neon-image-carousel" tabindex="0">
    <div class="neon-image-carousel__container" tabindex="-1">
      <!--v-if--><button class="neon-button--l neon-button--neutral neon-button--text neon-button--state-ready neon-button--text-transparent neon-button--disabled neon-button--with-icon neon-button--icon-only neon-button neon-image-carousel__previous neon-image-carousel__previous" disabled="" tabindex="-1" type="button" title="Previous">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </button>
      <ul class="no-style neon-image-carousel__items">
        <li class="neon-image-carousel__item--active neon-image-carousel__item"><img alt="Pic 1" src="/images/image-carousel/pic-01.jpg" class="neon-image-carousel__image">
          <!--v-if-->
        </li>
        <li class="neon-image-carousel__item"><img alt="Pic 2" src="/images/image-carousel/pic-02.jpg" class="neon-image-carousel__image">
          <!--v-if-->
        </li>
      </ul><button class="neon-button--l neon-button--neutral neon-button--text neon-button--state-ready neon-button--text-transparent neon-button--with-icon neon-button--icon-only neon-button neon-image-carousel__next neon-image-carousel__next" tabindex="0" type="button" title="Next">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </button>
    </div>
    <div class="neon-stack--gap-s neon-stack neon-image-carousel__nav-container">
      <!-- @slot stack contents -->
      <div class="neon-image-carousel__nav" tabindex="-1"><a class="neon-link--no-style neon-link--outline-none neon-link neon-image-carousel__nav-item-link neon-image-carousel__nav-item-link" tabindex="0" aria-label="Display image 1" role="button">
          <!-- @slot the content of the link -->
          <div class="neon-image-carousel__nav-item--active neon-image-carousel__nav-item" tabindex="-1">
            <div class="neon-image-carousel__nav-item-indicator"></div>
          </div>
        </a><a class="neon-link--no-style neon-link--outline-none neon-link neon-image-carousel__nav-item-link neon-image-carousel__nav-item-link" tabindex="0" aria-label="Display image 2" role="button">
          <!-- @slot the content of the link -->
          <div class="neon-image-carousel__nav-item" tabindex="-1">
            <div class="neon-image-carousel__nav-item-indicator"></div>
          </div>
        </a></div><span class="neon-image-carousel__label" tabindex="-1">2 images</span>
    </div>
  </div>
</div>
`;

exports[`NeonImageCarousel renders carousel without label 1`] = `
<div class="neon-image-carousel-wrapper">
  <div class="neon-image-carousel" tabindex="0">
    <div class="neon-image-carousel__container" tabindex="-1">
      <!--v-if--><button class="neon-button--l neon-button--neutral neon-button--text neon-button--state-ready neon-button--text-transparent neon-button--disabled neon-button--with-icon neon-button--icon-only neon-button neon-image-carousel__previous neon-image-carousel__previous" disabled="" tabindex="-1" type="button" title="Previous">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </button>
      <ul class="no-style neon-image-carousel__items">
        <li class="neon-image-carousel__item--active neon-image-carousel__item"><img alt="Pic 1" src="/images/image-carousel/pic-01.jpg" class="neon-image-carousel__image">
          <!--v-if-->
        </li>
        <li class="neon-image-carousel__item"><img alt="Pic 2" src="/images/image-carousel/pic-02.jpg" class="neon-image-carousel__image">
          <!--v-if-->
        </li>
      </ul><button class="neon-button--l neon-button--neutral neon-button--text neon-button--state-ready neon-button--text-transparent neon-button--with-icon neon-button--icon-only neon-button neon-image-carousel__next neon-image-carousel__next" tabindex="0" type="button" title="Next">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </button>
    </div>
    <div class="neon-stack--gap-s neon-stack neon-image-carousel__nav-container">
      <!-- @slot stack contents -->
      <div class="neon-image-carousel__nav" tabindex="-1"><a class="neon-link--no-style neon-link--outline-none neon-link neon-image-carousel__nav-item-link neon-image-carousel__nav-item-link" tabindex="0" aria-label="Display image 1" role="button">
          <!-- @slot the content of the link -->
          <div class="neon-image-carousel__nav-item--active neon-image-carousel__nav-item" tabindex="-1">
            <div class="neon-image-carousel__nav-item-indicator"></div>
          </div>
        </a><a class="neon-link--no-style neon-link--outline-none neon-link neon-image-carousel__nav-item-link neon-image-carousel__nav-item-link" tabindex="0" aria-label="Display image 2" role="button">
          <!-- @slot the content of the link -->
          <div class="neon-image-carousel__nav-item" tabindex="-1">
            <div class="neon-image-carousel__nav-item-indicator"></div>
          </div>
        </a></div>
      <!--v-if-->
    </div>
  </div>
</div>
`;
